--- a/global.css
+++ b/global.css
@@ -90,7 +90,7 @@ a {
 	--vermelho-fonte: #ea000c;
 	--vermelho-claro: #cb4e45;
 	--amarelo-fonte: #fed300;
-	--verde-whatsapp: #33a515;
+	--verde-whatsapp: #00fda0;
 	--azul-manifesto: #18407b;
 	--laranja-fonte: #fe6100;
 	--cinza-bg: #666666;
