slide feito. >Fazer responsividade

--- a/style.css
+++ b/style.css
@@ -77,28 +77,17 @@ Version: 1.0
   transition: 0.3s;
 }
 
+/* Ocultar todos os slides inicialmente */
+#introSlide .slide {
+  display: none;
+}
+
+/* Mostrar o slide ativo */
+#introSlide .active {
+  display: flex;
+}
+
 /* IMAGEM DE INTRODUÇÃO */
-
-.introSlide {
-  position: relative;
-  width: 100%;
-  height: auto;
-  overflow: hidden;
-}
-
-.introSlide > div {
-  position: absolute;
-  width: 100%;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.introSlide > div.active {
-  opacity: 1;
-  position: relative;
-}
-
-
  /* nando */
 .introNando {
   background: url(./assets/bg1.png);
@@ -109,10 +98,11 @@ Version: 1.0
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  height: 81vh;
 }
 
 .introNando img {
-  width: 700px;
+  width: 755px;
   max-width: 90vw;
   margin-top: 5%;
 }
@@ -153,10 +143,11 @@ Version: 1.0
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  height: 81vh;
 }
 
 .introBancada img {
-  width: 700px;
+  width: 630px;
   max-width: 90vw;
   margin-top: 5%;
 }
@@ -203,10 +194,11 @@ Version: 1.0
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  height: 81vh;
 }
 
 .introLuciana img {
-  width: 600px;
+  width: 563px;
   max-width: 90vw;
   margin-top: 5%;
 }
@@ -242,6 +234,7 @@ Version: 1.0
   font-weight: 900;
   font-size: 6.7rem;
 }
+
 
 
 .whatsapp {
