--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ Version: 1.0
   display: flex;
   width: 100%;
   position: fixed;
-  /* top: 0; */
+  top: 0;
   justify-content: space-around;
   align-items: center;
   height: 50px;
