--- a/style.css
+++ b/style.css
@@ -614,6 +614,7 @@ Version: 1.0
   text-align: center;
   margin-bottom: 5px;
   margin-top: 30px;
+  max-width: 90vw;
 }
 
 .contribuicao p {
@@ -621,6 +622,7 @@ Version: 1.0
   font-weight: 500;
   color: white;
   text-align: center;
+  max-width: 90vw;
 }
 
 .divCopiar {
@@ -648,6 +650,7 @@ Version: 1.0
   align-items: center;
   margin-top: 20px;
   margin-bottom: 30px;
+  max-width: 90vw;
 }
 
 .QRCode .QR {
