site corrigido e atualizado

--- a/responsivo.css
+++ b/responsivo.css
@@ -165,4 +165,9 @@
         gap: 0px;
     }
 
+    #nandoPage, #jairanPage, #alexandrePage, #lucianaPage, #tiagoPage,
+    #ericaPage {
+        padding: 20% 0;
+    }
+
 }
