--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ Version: 1.0
 /* IMAGEM DE INTRODUÇÃO */
  /* nando */
 .introNando {
-  background: url(./assets/bg1.png);
+  background: url(./assets/bg1.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -167,7 +167,7 @@ Version: 1.0
 
 /* bancada */
 .introBancada {
-  background: url(./assets/bg2.png);
+  background: url(./assets/bg2.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -219,7 +219,7 @@ Version: 1.0
 
 /* luciana */
 .introLuciana {
-  background: url(./assets/bg3.png);
+  background: url(./assets/bg3.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -614,6 +614,7 @@ Version: 1.0
   text-align: center;
   margin-bottom: 5px;
   margin-top: 30px;
+  max-width: 90vw;
 }
 
 .contribuicao p {
@@ -621,6 +622,7 @@ Version: 1.0
   font-weight: 500;
   color: white;
   text-align: center;
+  max-width: 90vw;
 }
 
 .divCopiar {
@@ -648,6 +650,7 @@ Version: 1.0
   align-items: center;
   margin-top: 20px;
   margin-bottom: 30px;
+  max-width: 90vw;
 }
 
 .QRCode .QR {
@@ -722,7 +725,6 @@ Version: 1.0
 }
 
 /* PAGINA CANDIDATOS */
-
 #nandoPage, #jairanPage, #alexandrePage, #lucianaPage {
   display: flex;
   flex-wrap: wrap;
